load("//tools:apollo_package.bzl", "apollo_cc_library", "apollo_cc_test", "apollo_component", "apollo_package")

package(default_visibility = ["//visibility:public"])

apollo_cc_library(
    name = "SabertoothMotorDriver",
    srcs = ["SabertoothMotorDriver.cpp"],
    hdrs = ["SabertoothMotorDriver.hpp"],
    deps = [
        "//platform/io:Status",
        "//platform/io/serial:BoostSerialDeviceManager",
    ],
)

apollo_cc_library(
    name = "SteeringServoMotorController",
    srcs = ["SteeringServoMotorController.cpp"],
    hdrs = ["SteeringServoMotorController.hpp"],
    deps = [
        "//platform/hardware/motors:PCA9685Config",
        "//platform/io:Status",
    ],
)
