load("//tools:apollo_package.bzl", "apollo_cc_library", "apollo_cc_test", "apollo_component", "apollo_package")

package(default_visibility = ["//visibility:public"])

apollo_cc_library(
    name = "SabertoothMotorDriver",
    srcs = ["SabertoothMotorDriver.cpp"],
    hdrs = ["SabertoothMotorDriver.hpp"],
    deps = [
        "//modules/common/status",
        "//solo/modules/drivers/serial:BoostSerialDeviceManager",
    ],
)

apollo_cc_library(
    name = "SteeringServoMotorController",
    srcs = [
        "PCA9685Config.hpp",
        "SteeringServoMotorController.cpp",
    ],
    hdrs = ["SteeringServoMotorController.hpp"],
    deps = [
        "//modules/common/status",
    ],
)
