load("//tools:apollo_package.bzl", "apollo_cc_library", "apollo_cc_test", "apollo_component", "apollo_package")

package(default_visibility = ["//visibility:public"])

apollo_cc_library(
    name = "BoostSerialDeviceManager",
    srcs = [
        "BoostSerialDevice.cpp",
        "BoostSerialDeviceManager.cpp",
    ],
    hdrs = [
        "BoostSerialDevice.hpp",
        "BoostSerialDeviceManager.hpp",
        "IOInterface.hpp",
    ],
    deps = [
        "//modules/common/status",
        "@boost",
    ],
)
